@@ -1,3 +1,8 @@
+2012-02-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* operation/events/events_list.php: Now toogle filter is not hide
+	when pagination is used in thie view.
+
 2012-02-09  Vanessa Gil  <vanessa.gil@artica.es>
 	* godmode/agentes/module_manager_editor_common.php: Fixed behavior combo
 	tag selected.
